--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -6449,10 +6449,32 @@ select option:not(:first-child) {
     min-height: 145px;
     height: auto;
 }
+
 .driver_list_form .license_pc .file-upload {
     max-width: 360px;
 }
 
+#toggleToolbar {
+    position: absolute;
+    top: 5px;
+    right: 10px;
+    background-color: transparent;
+    border: none;
+    width: max-content;
+}
+
+.ck-rounded-corners .ck.ck-editor__main>.ck-editor__editable,
+.ck.ck-editor__main>.ck-editor__editable.ck-rounded-corners {
+    border-bottom-left-radius: 8px !important;
+    border-bottom-right-radius: 8px !important;
+    border: 1px solid var(--whiteEB, #EBEBEB) !important;
+}
+
+.ck-toolbar {
+    border-top-left-radius: 8px !important;
+    border-top-right-radius: 8px !important;
+    border: 1px solid var(--whiteEB, #EBEBEB) !important;
+}
 
 /* *********************** PRINT MEDIA CODE ******************** */
 /* vocuhar print css  */
