--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -6615,6 +6615,12 @@ select option:not(:first-child) {
     background-color: #EBF6FF;
 }
 
+.vehicle_registration_steps .steps_container p {
+    font-size: 14px;
+    font-weight: 600;
+    color: var(--text-dark2);
+}
+
 .vehicle_registration_steps .steps_container {
     position: relative;
 }
@@ -6622,17 +6628,42 @@ select option:not(:first-child) {
 .vehicle_registration_steps .steps_container::before {
     content: '';
     position: absolute;
-    top: 50%;
-    left: 0;
-    width: 100%;
+    top: 30px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 90%;
     border-top: 3px dashed #EBEBEB;
     z-index: 1;
-    transform: translateY(-50%);
     border-image: repeating-linear-gradient(to right,
             #EBEBEB 0,
             #EBEBEB 10px,
             transparent 10px,
             transparent 20px) 1;
+}
+
+.registration_title {
+    padding: 44px 0px 34px 0;
+}
+
+.registration_title p {
+    font-size: 14px;
+    color: var(--text-5C);
+    font-weight: 400;
+}
+
+.registration_title h3 {
+    font-size: 20px;
+    font-weight: 700;
+    color: var(--text-dark2);
+    margin-bottom: 4px;
+}
+
+.vehicle_image_select_container {
+    border-radius: 24px;
+    border: 1px solid var(--Neutral-Separator, #EBEBEB);
+    background: var(--white);
+    padding: 24px;
+    width: max-content;
 }
 
 /* list of task masg popup history css  */
