--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -6569,6 +6569,26 @@ select option:not(:first-child) {
     border-radius: 24px;
     padding: clamp(16px, 3vw, 44px);
     overflow-y: auto;
+
+    scrollbar-color: var(--neutral-primay) #f5f5f5;
+    clip-path: inset(0 round 24px);
+
+}
+
+/* Chrome, Edge, Safari custom scrollbar */
+.vehicle_list_popup_content::-webkit-scrollbar {
+    width: 6px;
+}
+
+.vehicle_list_popup_content::-webkit-scrollbar-track {
+    background: #f5f5f5;
+    border-radius: 10px;
+}
+
+.vehicle_list_popup_content::-webkit-scrollbar-thumb {
+    background-color: var(--neutral-primay);
+    border-radius: 10px;
+    border: 2px solid #f5f5f5;
 }
 
 .heading_container {
@@ -6723,6 +6743,115 @@ select option:not(:first-child) {
     display: none;
     height: 100%;
     width: 100%;
+}
+
+/* multi select dropddown  */
+.multi_select_tag {
+    margin-top: 16px;
+    font-family: var(--lato);
+}
+
+.multi_select_tag .multi-select {
+    position: relative;
+    width: 100%;
+}
+
+.multi_select_tag .select-box {
+    border: 1px solid var(--Neutral-Separator);
+    padding: 12px;
+    border-radius: 8px;
+    cursor: pointer;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 4px;
+    min-height: 48px;
+    align-items: center;
+}
+
+.multi_select_tag .select-box:after {
+    content: "\ea4e";
+    font-family: "remixicon";
+    font-size: 16px;
+    color: #848484;
+    pointer-events: none;
+    position: absolute;
+    font-size: 24px;
+    top: 50%;
+    right: 12px;
+    transform: translateY(-50%);
+}
+
+.multi_select_tag .tags {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 4px;
+}
+
+.multi_select_tag .tag {
+    font-size: 14px;
+    color: var(--text-dark2);
+    font-weight: 400;
+    padding: 8px;
+    border: 1px solid var(--Neutral-Separator);
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.multi_select_tag .options {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    border: 1px solid var(--whiteEB);
+    border-top: none;
+    background: var(--white);
+    z-index: 100;
+    display: none;
+    max-height: 150px;
+    overflow-y: auto;
+}
+
+.multi_select_tag .option {
+    padding: 8px;
+    cursor: pointer;
+}
+
+.multi_select_tag .option:hover {
+    background: #f0f0f0;
+}
+
+.multi_select_tag .option.selected {
+    color: var(--text-dark2);
+    font-size: 14px;
+    font-weight: 400;
+
+}
+
+/* multi select dropddown ends */
+.vehicle_details_Form {
+    padding-top: 40px;
+    border-top: 1px solid var(--whiteEB);
+    margin-top: 60px;
+    margin-bottom: 40px;
+    padding-bottom: 60px;
+    border-bottom: 1px solid var(--whiteEB);
+}
+
+.vehicle_details_Form .common_form input,
+.vehicle_details_Form .common_form select {
+    background: transparent;
+}
+
+.vehicle_list_popup_outer_bg .ck.ck-editor__main>.ck-editor__editable:not(.ck-focused),
+.ck.ck-toolbar.ck-toolbar_grouping>.ck-toolbar__items {
+    background: transparent;
+}
+
+.vehicle_details_Form .registration_title {
+    padding: 0;
+    padding-bottom: 10px;
 }
 
 /* list of task masg popup history css  */
